apply from: "$rootProject.projectDir/gradle/distributableGhidraModule.gradle"
apply from: "$rootProject.projectDir/gradle/javaProject.gradle"
apply from: "$rootProject.projectDir/gradle/jacocoProject.gradle"
apply from: "$rootProject.projectDir/gradle/javaTestProject.gradle"
apply plugin: 'eclipse'

eclipse.project.name = 'Framework Utility'

// Restrict to Java 1.8 for compatibility with the GhidraDev Eclipse plugin.
sourceCompatibility = 1.8
targetCompatibility = 1.8
